# power-manager

./: .gitignore  README.md  power-manager  pyproject.toml
src/power_manager/: __main__.py  cli.py  config.py
